Fix: relax CORS for debugging